--- a/database.yml
+++ b/database.yml
@@ -30,11 +30,11 @@ production:
   #url: {{envOr "DATABASE_URL" "mysql://root:root@(localhost:3306)/blog_production?parseTime=true&multiStatements=true&readTimeout=3s"}}
   #
   dialect: "mysql"
-  database: "blog_production"
-  host: {{envOr "DATABASE_HOST" "localhost"}}
-  port: {{envOr "DATABASE_PORT" "3306"}}
-  user: {{envOr "DATABASE_USER" "root"}}
-  password: {{envOr "DATABASE_PASSWORD" "root"}}
+  database: {{ envOr "DB_NAME" "localhost"}}
+  host: {{ envOr "DB_HOST" "localhost"}}
+  port: {{ envOr "DB_PORT" "3306"}}
+  user: {{ envOr "DB_USERNAME" "go_buffalo"}}
+  password: {{ envOr "DB_PASSWORD" ""}}
   #
   # And you can also override connection parameters by setting it under options.
   #
